--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
                       <a class="nav-link link" href="./index.html#header9-u">About us</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link link" href="./index.html#countdown1-o">FifaEvent</a>
+                      <a class="nav-link link" href="./index.html#countdown1-o">Fifa Tourney & WC Screening</a>
                     </li>
                     <li class="nav-item" style="text-decoration: none;">
                       &nbsp;
                       &nbsp;
                       &nbsp;
                       &nbsp;
-                      <a href="#" class="fa fa-facebook" style="font-size: 20px;color: white"></a>
+                      <a href="https://www.facebook.com/teamestars/" class="fa fa-facebook" style="font-size: 20px;color: white"></a>
                       &nbsp;
-                      <a href="#" class="fa fa-instagram" style="font-size: 20px;color: white"></a>
+                      <a href="https://www.instagram.com/estarsevents/" class="fa fa-instagram" style="font-size: 20px;color: white"></a>
                     </li>
                   </ul>
                 </div>
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="text-align: left;">
 
-                    <h1 class="mbr-section-title display-1"><img src="./eStars_website/star-1.png" height="250" style="margin-bottom: 10px"> eStars</h1>
+                    <h1 class="mbr-section-title display-1"><img src="./eStars_website/star-1.png" height="250"> eStars</h1>
                     <p class="mbr-section-text lead" style="color: white;">An immersive platform for today's cyber athletes to experience the best of eSports, and global sporting events altogether</p>
                 </div>
             </div>
@@ -131,8 +131,36 @@
         <div class="row">
 
             <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-                <h3 class="mbr-section-title display-4"><img src="./eStars_website/mx.png" height="50" width="75" style="margin-bottom: 10px"> &nbsp;Fifa Event&nbsp; <img src="./eStars_website/de.png" height="50" width="75" style="margin-bottom: 10px"></h3>
-                <p class="mbr-section-text lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci a, rem accusantium recusandae beatae. Eos quae sint minus dolorum facere, iure illum veritatis harum minima quod voluptatibus culpa tenetur eveniet enim. Natus, id cupiditate aperiam obcaecati incidunt nam minus accusantium libero officia expedita dignissimos optio, quis, minima quibusdam esse saepe!</p>
+                <h4 class="mbr-section-title display-4" style="font-size: 35px"><img src="./eStars_website/mx.png" height="50" width="75" style="margin-bottom: 10px"> &nbsp;Fifa 18 Tournament & World Cup Screening&nbsp; <img src="./eStars_website/de.png" height="50" width="75" style="margin-bottom: 10px"></h4>
+                <p class="mbr-section-text lead"> With the FIFA World Cup around the corner coupled with the all-time high popularity of FIFA on the PlayStation 4, we are excited to bring to you an event which does promotes both, eSports as well as the viewership of football in India. Join us for an adrenaline-fuelled 1v1 FIFA tournament in the day, and a night full of live World Cup action where Mexico takes on Germany.<br/>
+                <br/>
+              </p>
+              <br/>
+              <div class="row">
+                <div class="col-md-5 col-md-offset-1">
+                  <p class="mbr-section-text lead" style="text-align: left;">
+                    <b><u>FIFA 18 Gaming Tournament Details</u></b>:<br/>
+                    Date: &nbsp;17th June, 2018<br/>
+                    Location: &nbsp;Taksim, Ansal Plaza, New Delhi<br/>
+                    Prize Pool: &nbsp;Upto &#x20B9;50,000/-<br/>
+                    Platform: &nbsp;PlayStation 4<br/>
+                    Entry fee: &nbsp;&#x20B9; 500/-<br/>
+                    Structure: &nbsp;Solo (1v1) Tournament<br/>
+                    Timing: &nbsp;11:30am - 7:00pm<br/>
+                  </p>
+                </div>
+                <div class="col-md-5">
+                  <p class="mbr-section-text lead" style="text-align: left;">
+                    <b><u>FIFA World Cup Streaming Details</u></b>:<br/>
+                    Date: &nbsp;17th June, 2018<br/>
+                    Location: &nbsp;<a href="https://goo.gl/maps/1UqXb3RASTu" style="font-style: normal;">Taksim</a>, Ansal Plaza, New Delhi<br/>
+                    Timing: &nbsp;8:30pm onward<br/>
+                  </p>                  
+                </div>
+              </div>
+              <p class="mbr-section-text lead">
+                Sound like something you don't wanna miss? Register <a href="https://goo.gl/forms/fHRKk6XNKrTbhdLf2">here</a>. If you have any questions, please do not hesistate to contact us at <a href="mailto:estarsofficial@gmail.com">estarsofficial@gmail.com</a>, or reach out to us through our <a href="https://www.facebook.com/teamestars/">Facebook Page</a>.<br/><br/> We look forward to seeing you there!
+              </p>
             </div>
 
             <div class="col-xs-12 col-lg-10 col-lg-offset-1 col-xl-8 col-xl-offset-2 text-xs-center">
@@ -170,25 +198,21 @@
     <div class="container-fluid">
     <div class="col-xs-12 col-lg-10 col-lg-offset-1">
     	<div class="row">
-    		<div class="col-xs-12">
-    			<div class="footer-list col-xs-12 col-lg-9">
-<!--     				<div class="col-xs-12 col-sm-6 col-lg-3 text-xs-center text-md-left">
-                        <p class="mbr-section-subtitle display-3">product</p>
-                        <p class="mbr-section-text lead">Popular</p>
-                        <p class="mbr-section-text lead">Trending</p>
-                        <p class="mbr-section-text lead">Catalog</p>
-                        <p class="mbr-section-text lead">Awesome</p>
-                        <p class="mbr-section-text lead">Best</p>
-                    </div> -->
-    			</div>
-    		</div>
+    				<div class="col-md-8 text-xs-center text-md-left">
+                <p class="mbr-section-subtitle display-3">Contact Us</p>
+                <p class="mbr-section-text lead">Team eStars</p>
+                <p class="mbr-section-text lead">Email: <a href="mailto:estarsofficial@gmail.com">estarsofficial@gmail.com</a></p>
+                <p class="mbr-section-text lead">Phone: +91-9654486365</p>
+                <p class="mbr-section-text lead">Team members: Vitesh Bansal, Karmanya Mehta, Siddharth Nehra</p>
+                <p class="mbr-section-text lead"><a href="https://www.facebook.com/teamestars/" class="fa fa-facebook" style="font-size: 20px;color: white; font-style: normal"></a> &nbsp; <a href="https://www.instagram.com/estarsevents/" class="fa fa-instagram" style="font-size: 20px;color: white;font-style: normal"></a></p>
+            </div>
     	</div>
         </div>
     </div>
-    <div class="container margin-top-40">
+<!--     <div class="container margin-top-40">
         <p class="text-xs-center mbr-section-text lead">Copyright (c) 2018 <a href="./index.html">eStars</a>.</p>
     </div>
-</footer>
+ --></footer>
 
 <!-- Display the countdown timer in an element -->
 
