--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             </div>
 
             <div class="row">
-                <div class="col-md-5" style="margin-top: -50px">
-                  <img src="./eStars_website/place.jpg" height="350" width="490">
+                <div class="col-md-7">
+                  <img src="./eStars_website/place.jpg">
                 </div>
-                <div class="col-md-7" style="margin-top: -50px">
+                <div class="col-md-5">
                   <b><u>Who we are</u></b>: &nbsp;eStars is an e-sports event management firm, organising innovative events and providing a holistic customer experience. We lay emphasis on and craft each and every aspect of the event with utmost diligence, gaming being at the heart of it.<br/><br/>
 
                   <b><u>What we do</u></b>: &nbsp; We design memorable experiences for our customers, and provide a variety that appeals to everyone's interests. We aim at building an interconnected entertainment network hich changes the perception of gaming, and brings out the suppressed talents of the millennials.<br/><br/>
